k8s/doadores/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doadores-service
  labels: { app.kubernetes.io/name: doadores-service, app.kubernetes.io/component: service, app.kubernetes.io/part-of: 4life }
spec:
  type: ClusterIP
  selector: { app.kubernetes.io/name: doadores-service }
  ports:
    - { name: http, port: 3001, targetPort: http }
